Details
-
Bug
-
Status: Closed
-
P2
-
Resolution: Fixed
-
17
-
b21
-
x86_64
-
generic
Description
The following test failed in the JDK17 CI:
applications/runthese/RunThese30M.java
Here's a snippet from the log file:
[stress.process.out] Verifying the constraints on the serial fields
[stress.process.out] ConstructorTest0003 passed
[2021-04-26T12:11:07.400644200Z] Gathering output for process 50396
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=\\stackWatermark.cpp:179
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (t:\\workspace\\open\\src\\hotspot\\share\\runtime\\stackWatermark.cpp:179), pid=28660, tid=47916
# assert(is_frame_safe(f)) failed: Frame must be safe
#
# JRE version: Java(TM) SE Runtime Environment (17.0+20) (fastdebug build 17-ea+20-LTS-1686)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-ea+20-LTS-1686, mixed mode, sharing, tiered, compressed class ptrs, z gc, windows-amd64)
# Core dump will be written. Default location: T:\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java\\scratch\\0\\hs_err_pid28660.mdmp
#
# An error report file with more information is saved as:
# T:\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java\\scratch\\0\\hs_err_pid28660.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(1200/94003)*----------
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x0000014c4836bc70): JavaThread "logback-appender-logstash-logstash-prod.s0.javaplatfo1iad.oraclevcn.com:10074-4" daemon [_thread_in_Java, id=47916, stack(0x00000032adc00000,0x00000032add00000)]
Stack: [0x00000032adc00000,0x00000032add00000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0xacc441] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:235)
V [jvm.dll+0xcef0d7] VMError::report+0xfc7 (vmError.cpp:739)
V [jvm.dll+0xcf0a5e] VMError::report_and_die+0x7fe (vmError.cpp:1549)
V [jvm.dll+0xcf1174] VMError::report_and_die+0x64 (vmError.cpp:1330)
V [jvm.dll+0x4ce787] report_vm_error+0xb7 (debug.cpp:282)
V [jvm.dll+0xbb4b18] StackWatermark::assert_is_frame_safe+0xd8 (stackWatermark.cpp:179)
V [jvm.dll+0xbb5b06] StackWatermarkSet::after_unwind+0x1a6 (stackWatermarkSet.cpp:93)
V [jvm.dll+0xb71193] OptoRuntime::rethrow_C+0x23 (runtime.cpp:1425)
C 0x0000014a2e2b7255
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
v ~RuntimeStub::_rethrow_Java
J 2043 c1 sun.nio.ch.NioSocketImpl.read([BII)I java.base@17-ea (96 bytes) @ 0x0000014a2eb253f4 [0x0000014a2eb24c80+0x0000000000000774]
J 2042 c1 sun.nio.ch.NioSocketImpl$1.read([BII)I java.base@17-ea (11 bytes) @ 0x0000014a2eb2467c [0x0000014a2eb245e0+0x000000000000009c]
J 4291 c1 java.net.Socket$SocketInputStream.read()I java.base@17-ea (28 bytes) @ 0x0000014a2eda1174 [0x0000014a2eda0f20+0x0000000000000254]
j net.logstash.logback.appender.AbstractLogstashTcpSocketAppender$TcpSendingEventHandler$ReaderRunnable.run()V+14
j java.util.concurrent.Executors$RunnableAdapter.call()Ljava/lang/Object;+4 java.base@17-ea
j java.util.concurrent.FutureTask.run()V+39 java.base@17-ea
j java.util.concurrent.ScheduledThreadPoolExecutor$ScheduledFutureTask.run()V+28 java.base@17-ea
j java.util.concurrent.ThreadPoolExecutor.runWorker(Ljava/util/concurrent/ThreadPoolExecutor$Worker;)V+92 java.base@17-ea
j java.util.concurrent.ThreadPoolExecutor$Worker.run()V+5 java.base@17-ea
j java.lang.Thread.run()V+11 java.base@17-ea
v ~StubRoutines::call_stub
I'm starting this bug off in hotspot/gc since the assert failure
is in StackWatermark::assert_is_frame_safe() and this is ZGC.
applications/runthese/RunThese30M.java
Here's a snippet from the log file:
[stress.process.out] Verifying the constraints on the serial fields
[stress.process.out] ConstructorTest0003 passed
[2021-04-26T12:11:07.400644200Z] Gathering output for process 50396
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=\\stackWatermark.cpp:179
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (t:\\workspace\\open\\src\\hotspot\\share\\runtime\\stackWatermark.cpp:179), pid=28660, tid=47916
# assert(is_frame_safe(f)) failed: Frame must be safe
#
# JRE version: Java(TM) SE Runtime Environment (17.0+20) (fastdebug build 17-ea+20-LTS-1686)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-ea+20-LTS-1686, mixed mode, sharing, tiered, compressed class ptrs, z gc, windows-amd64)
# Core dump will be written. Default location: T:\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java\\scratch\\0\\hs_err_pid28660.mdmp
#
# An error report file with more information is saved as:
# T:\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java\\scratch\\0\\hs_err_pid28660.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(1200/94003)*----------
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x0000014c4836bc70): JavaThread "logback-appender-logstash-logstash-prod.s0.javaplatfo1iad.oraclevcn.com:10074-4" daemon [_thread_in_Java, id=47916, stack(0x00000032adc00000,0x00000032add00000)]
Stack: [0x00000032adc00000,0x00000032add00000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0xacc441] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:235)
V [jvm.dll+0xcef0d7] VMError::report+0xfc7 (vmError.cpp:739)
V [jvm.dll+0xcf0a5e] VMError::report_and_die+0x7fe (vmError.cpp:1549)
V [jvm.dll+0xcf1174] VMError::report_and_die+0x64 (vmError.cpp:1330)
V [jvm.dll+0x4ce787] report_vm_error+0xb7 (debug.cpp:282)
V [jvm.dll+0xbb4b18] StackWatermark::assert_is_frame_safe+0xd8 (stackWatermark.cpp:179)
V [jvm.dll+0xbb5b06] StackWatermarkSet::after_unwind+0x1a6 (stackWatermarkSet.cpp:93)
V [jvm.dll+0xb71193] OptoRuntime::rethrow_C+0x23 (runtime.cpp:1425)
C 0x0000014a2e2b7255
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
v ~RuntimeStub::_rethrow_Java
J 2043 c1 sun.nio.ch.NioSocketImpl.read([BII)I java.base@17-ea (96 bytes) @ 0x0000014a2eb253f4 [0x0000014a2eb24c80+0x0000000000000774]
J 2042 c1 sun.nio.ch.NioSocketImpl$1.read([BII)I java.base@17-ea (11 bytes) @ 0x0000014a2eb2467c [0x0000014a2eb245e0+0x000000000000009c]
J 4291 c1 java.net.Socket$SocketInputStream.read()I java.base@17-ea (28 bytes) @ 0x0000014a2eda1174 [0x0000014a2eda0f20+0x0000000000000254]
j net.logstash.logback.appender.AbstractLogstashTcpSocketAppender$TcpSendingEventHandler$ReaderRunnable.run()V+14
j java.util.concurrent.Executors$RunnableAdapter.call()Ljava/lang/Object;+4 java.base@17-ea
j java.util.concurrent.FutureTask.run()V+39 java.base@17-ea
j java.util.concurrent.ScheduledThreadPoolExecutor$ScheduledFutureTask.run()V+28 java.base@17-ea
j java.util.concurrent.ThreadPoolExecutor.runWorker(Ljava/util/concurrent/ThreadPoolExecutor$Worker;)V+92 java.base@17-ea
j java.util.concurrent.ThreadPoolExecutor$Worker.run()V+5 java.base@17-ea
j java.lang.Thread.run()V+11 java.base@17-ea
v ~StubRoutines::call_stub
I'm starting this bug off in hotspot/gc since the assert failure
is in StackWatermark::assert_is_frame_safe() and this is ZGC.
Attachments
Issue Links
- duplicates
-
JDK-8266029 assert(is_frame_safe(f)) failed: Frame must be safe
-
- Closed
-
- relates to
-
JDK-8265702 ZGC on macOS/aarch64
-
- Resolved
-
-
JDK-8266453 Shenandoah: Disable write protections before patching nmethod in nmethod_barrier on MacOSX/AArch64
-
- Resolved
-