8265984: Concurrent GC: Some tests fail "assert(is_frame_safe(f)) failed: Frame must be safe"